--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
     "postcss-custom-media": "^10.0.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5"
